# compact-path

./: .gitignore  .travis.yml  README.md  compact_path.py  pyproject.toml  requirements.txt  test_compact_path.py
.circleci/: config.yml
compact_path/: cli.py  test_compact_path.py
