[project]
name = "compact-path"
version = "0.2.0"
description = "Compact path elements down to a single character"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
        "docopt>=0.6.2",
]
[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
[project.scripts]
compact-path = "compact_path.cli:main"
